style.css
/* You ventured into the CSS!
   For reaching these harsh lands, have a small 'logo' for your troubles.

   'j'
*/

/* Color Variables */
:root {
    --accent-blue: #0095ff;
    --accent-green: #49fd8b;

    --bg-base-1: #dcebff;
    --bg-base-2: #adccff;

    --bg-card: #c5dfff;
    --bg-card-2: #96c5ff;
    --border-card: #355a7c;
    --border-green: #134123;

    --text: #1a2c3d;
}

/* Scrolling Background */
html {
    background: repeating-conic-gradient(var(--bg-base-1) 0 25%, var(--bg-base-2) 0 50%) 50% / 300px 300px;
    animation: bg-scroll 3s linear infinite;
}

@keyframes bg-scroll {
    0% {
        background-position: 0 0;
    }

    100% {
        background-position: 150px 150px;
    }
}

/* General Attributes */
body {
    text-align: center;
    font-family: 'Noto Sans';
    margin: 0;
    transition: all 0.5s;
}

header {
    background-color: var(--accent-blue);
    border-bottom-right-radius: 80px;
    border-bottom-left-radius: 80px;
    margin: auto;
    max-width: 600px;
}

header img {
    max-width: 500px;
    height: auto;
    width: auto;
}

h1 {
    background-color: var(--bg-card-2);

    font-family: 'Noto Sans';
    font-size: 4.5em;

    width: fit-content;
    margin: auto;
    padding: 20px;

    border-radius: 20px;
    border-style: solid;
    border-width: 5px;
    border-color: var(--border-card);
}

h2 {
    margin-top: 10px;
    margin-bottom: 5px;
    font-family: 'Noto Sans';
    font-size: 3em;
    word-break: break-word;
}

h3 {
    margin-top: 20px;
    margin-bottom: 5px;
    font-family: 'Noto Sans';
    font-size: 1.5em;
}

p {
    margin-top: 0px;
    font-family: 'Noto Sans';
    font-weight: 500;
    font-size: 1.5em;
}


/* Buttons */
a {
    margin-top: 0px;
    font-family: 'Noto Sans';
    font-weight: semi-bold;
    font-size: 1.5em;
    text-decoration: none;
}

.button {
    display: inline-block;
    position: relative;
    top: 0;
    transition: ease 0.2s;
    background-color: var(--accent-blue);
    color: #ffffff;
    padding: 20px;
    width: fit-content;
    margin: 10px;
    margin-left: 0;
    border-radius: 20px;
    white-space: nowrap;
    border-style: solid;
    border-width: 5px;
    border-color: var(--border-card);
}

.button:hover {
    transform: scale(1.05);
    filter: brightness(110%);
}

.button:active {
    transform: scale(0.95);
    filter: brightness(90%);
}


/* Project Containers */
.projects-container {
    margin: 2vw;
    grid-template-columns: repeat(1, 1fr);
    grid-auto-rows: minmax(100px, auto);
    gap: 20px;
    place-items: center;
    display: grid;
    align-items: center;
    justify-content: center;
}

@media (min-width: 700px) {
    .projects-container {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (min-width: 1366px) {
    .projects-container {
        grid-template-columns: repeat(3, 1fr);
    }
}

.project {
    height: 100%;
    width: 100%;

    display: flex;
    flex-wrap: wrap;
    overflow-wrap: break-word;
    align-items: center;
    justify-content: center;

    color: var(--text);
    background-color: var(--bg-card);

    border-radius: 20px;
    border-style: solid;
    border-width: 5px;
    border-color: var(--border-card);
}

.project-image-container {
    text-align: center;
    padding: 20px;
}

.project-image-container img {
    border-radius: 20px;
    width: 200px;
}

.project-desc-container {
    flex: 1;
    text-align: left;
    padding: 20px;
}

/* Dark theme to relax your eyes! */
@media (prefers-color-scheme: dark) {
    :root {
        --bg-base-1: #0f2133;
        --bg-base-2: #153261;

        --bg-card: #355a7c;
        --bg-card-2: #195287;
        --border-card: #c5dfff;
        --border-green: #cfffe0;

        --text: #e6f1ff;
    }

    body {
        color: white;
    }
}

/* You reached the end! Thanks for reading (or scrolling)! :) */

